header control middleware + unit test

--- a/BiKafaProject.API/BiKafaProject.API.csproj
+++ b/BiKafaProject.API/BiKafaProject.API.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BiKafaProject.Core\BiKafaProject.Core.csproj" />
+    <ProjectReference Include="..\BiKafaProject.Service\BiKafaProject.Service.csproj" />
   </ItemGroup>
 
 
